doc: fix missing references

--- a/doc/MRScpOptSize.bib
+++ b/doc/MRScpOptSize.bib
@@ -39,6 +39,28 @@ location = {Austin, Texas, USA},
 series = {PEPM ’11}
 }
 
+@article{TMR/SCP2014,
+	author="Klyuchnikov, Ilya and  Krustev, Dimitur",
+	title="Supercompilation: Ideas and methods",
+	journal="The Monad Reader",
+	volume="23",
+	year="2014"
+	}
+	
+@inproceedings{Klyuchnikov2010,
+	author="Klyuchnikov, Ilya	and Romanenko, Sergei",
+	editor="Pnueli, Amir and Virbitskaite, Irina and Voronkov, Andrei",
+	title="Proving the Equivalence of Higher-Order Terms by Means of Supercompilation",
+	booktitle="Perspectives of Systems Informatics: 7th International Andrei Ershov Memorial Conference, PSI 2009, Novosibirsk, Russia, June 15-19, 2009. Revised Papers",
+	year="2010",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="193--205",
+	isbn="978-3-642-11486-1",
+	doi={10.1007/978-3-642-11486-1_17},
+	url={http://dx.doi.org/10.1007/978-3-642-11486-1_17}
+}
+	
 @InProceedings{KlyuchnikovMRSCBranch,
 author="Klyuchnikov, Ilya
 and Romanenko, Sergei A.",
@@ -52,10 +74,67 @@ publisher="Springer Berlin Heidelberg",
 address="Berlin, Heidelberg",
 pages="210--226",
 abstract="The paper deals with some aspects of metasystem transitions in the context of supercompilation. We consider the manifestations of the law of branching growth of the penultimate level in the case of higher-level supercompilation and argue that this law provides some useful hints regarding the ways of constructing metasystems by combining supercompilers. In particular we show the usefulness of multi-result supercompilation for proving the equivalence of expressions and in two-level supercompilation.",
-isbn="978-3-642-29709-0"
+isbn="978-3-642-29709-0",
 doi={10.1007/978-3-642-29709-0_19}
 }
 
+@inproceedings{Klyuchnikov:META2012:MRSC,
+  title={Formalizing and Implementing Multi-Result Supercompilation},
+  author={Ilya G. Klyuchnikov and Sergei A. Romanenko},
+  booktitle={Proceedings of the Third International Workshop on Metacomputation (META 2012)},
+  year={2012},
+  pages = {142--164},
+  editor = {A. V. Klimov and S. A. Romanenko},
+  __publisher = {Ailamazyan University of Pereslavl}
+}
+
+@inproceedings{krustev2014approach,
+	title={An Approach for Modular Verification of Multi-Result Supercompilers},
+	author={Krustev, Dimitur Nikolaev},
+	booktitle={Proceedings of the Fourth International Valentin Turchin Workshop on Metacomputation},
+	editor={A.V. Klimov and S.A. Romamenko},
+	year={2014},
+	pages={177--193},
+	isbn={978-5-901795-31-6},
+	address={Pereslavl-Zalessky, Russia},
+	publisher={University of Pereslavl Publishing House}
+}
+
+@TECHREPORT{MendelGleasonPhD2011,
+author =	{Gavin Mendel-Gleason},
+title =	{Types and Verification for Infinite State Systems},
+type =	{{PhD thesis}},
+institution =	{Dublin City University},
+address =	{Dublin, Ireland},
+year = 2011
+}
+
+@mastersthesis{Sorensen1994TurchinSupercompiler,
+	Author = {S{\o}rensen, M. H.},
+	School = {K{\o}benhavns Universitet, Datalogisk Institut},
+	Title = {Turchin{'}s Supercompiler Revisited: an Operational Theory of Positive Information Propagation},
+	Year = {1994}}
+  
+@InProceedings{sorm98b,
+  AUTHOR       = {S{\o}rensen, Morten Heine and Gl\"uck, Robert},
+  YEAR         = {1999},
+  TITLE        = {Introduction to Supercompilation},
+  BOOKTITLE    = {Partial Evaluation: Practice and Theory},
+  editor       = {Hatcliff, John and Mogensen, Torben and Thiemann, Peter},
+  publisher    = {Springer-Verlag},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {1706},
+  pages        = {246--270},
+  keywords     = {Supercompilation, termination},
+  summary      = {The paper gives an introduction to Turchin's supercompiler, 
+               a program transformer for functional programs which performs
+               optimizations beyond partial evaluation and deforestation.
+               More precisely, the paper presents positive supercompilation.},
+  SEMNO        = {D-364},
+  PUF          = {Artikel i proceedings (uden censur)},
+  _ID           = {Kon}
+ }
+ 
 @article{TurchinSupercompilerConcept,
 author = {Turchin, Valentin F.},
 title = {The Concept of a Supercompiler},
