doc: add an abstract

--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -28,10 +28,13 @@
 \maketitle
 
 \begin{abstract}
-This is a sentence in the abstract.
-This is another sentence in the abstract.
-This is yet another sentence in the abstract.
-This is the final sentence in the abstract.
+Supercompilation is a powerful program transformation technique with numerous interesting applications.
+Existing methods of supercompilation, however, are often very unpredictable with respect to the size
+of the resulting programs.
+We consider an approach for controlling result size, based on a combination of multi-result
+supercompilation and a specific generalization strategy, which avoids code duplication.
+The current early experiments with this method show promising results -- we can keep
+the size of the result small, while still performing powerful optimizations.
 \end{abstract}
 
 \section{Introduction}
