--- a/doc/MRScpOptSize.bib
+++ b/doc/MRScpOptSize.bib
@@ -22,6 +22,34 @@ isbn={978-5-901795-31-6},
 url={http://meta2014.pereslavl.ru/papers/2014_Grechanik_Klyuchnikov_Romanenko__Staged_Multi-Result_Supercompilation__Filtering_by_Transformation.pdf},
 }
 
+@article{Hamilton07,
+	added-at = {2016-01-13T00:00:00.000+0100},
+	author = {Hamilton, Geoff W.},
+	biburl = {http://www.bibsonomy.org/bibtex/2324234fcfb6b2b565a01f837b08a08aa/dblp},
+	ee = {http://dx.doi.org/10.1016/j.entcs.2007.09.005},
+  doi={10.1016/j.entcs.2007.09.005},
+	interhash = {4cc4c9d853346c9ec48eb0d21d1ba1a7},
+	intrahash = {324234fcfb6b2b565a01f837b08a08aa},
+	journal = {Electr. Notes Theor. Comput. Sci.},
+	keywords = {dblp},
+	number = 4,
+	pages = {17-32},
+	timestamp = {2016-01-14T11:36:18.000+0100},
+	title = {Distilling Programs for Verification.},
+	url_ = {http://dblp.uni-trier.de/db/journals/entcs/entcs190.html#Hamilton07},
+	volume = 190,
+	year = 2007
+}
+
+@book{Jones:1993:PEA:153676,
+	author = {Jones, Neil D. and Gomard, Carsten K. and Sestoft, Peter},
+	title = {Partial Evaluation and Automatic Program Generation},
+	year = {1993},
+	isbn = {0-13-020249-5},
+	publisher = {Prentice-Hall, Inc.},
+	address = {Upper Saddle River, NJ, USA},
+} 
+
 @inproceedings{Jonsson2011Taming,
 author = {Jonsson, Peter A. and Nordlander, Johan},
 title = {Taming Code Explosion in Supercompilation},
@@ -78,6 +106,16 @@ isbn="978-3-642-29709-0",
 doi={10.1007/978-3-642-29709-0_19}
 }
 
+@inproceedings{Klyuchnikov:META2010:HigherLevelScp,
+  title={Towards Higher-Level Supercompilation},
+  author={Ilya G. Klyuchnikov and Sergei A. Romanenko},
+  booktitle={Proceedings of the Second International Workshop on Metacomputation (META 2010)},
+  year={2010},
+  pages = {82--101},
+  editor = {A. P. Nemytykh},
+  __publisher = {Ailamazyan University of Pereslavl}
+}
+
 @inproceedings{Klyuchnikov:META2012:MRSC,
   title={Formalizing and Implementing Multi-Result Supercompilation},
   author={Ilya G. Klyuchnikov and Sergei A. Romanenko},
@@ -98,6 +136,20 @@ doi={10.1007/978-3-642-29709-0_19}
 	isbn={978-5-901795-31-6},
 	address={Pereslavl-Zalessky, Russia},
 	publisher={University of Pereslavl Publishing House}
+}
+
+@article{Lisitsa2017,
+   title={Verification of Programs via Intermediate Interpretation},
+   volume={253},
+   ISSN={2075-2180},
+   url={http://dx.doi.org/10.4204/EPTCS.253.6},
+   DOI={10.4204/eptcs.253.6},
+   journal={Electronic Proceedings in Theoretical Computer Science},
+   publisher={Open Publishing Association},
+   author={Lisitsa, Alexei P. and Nemytykh, Andrei P.},
+   year={2017},
+   month={Aug},
+   pages={54–74}
 }
 
 @TECHREPORT{MendelGleasonPhD2011,
